# LoRaMac-node

./: CMakeLists.txt
src/boards/LoRaMote/: board.c  gpio-board.c  gpio-board.h  sx1272-board.c
src/boards/MoteII/: adc-board.c  board.c  gpio-board.c  gpio-board.h  i2c-board.c  rtc-board.c  sx1272-board.c  uart-board.c
src/boards/NAMote72/: board.c  uart-board.c
src/boards/SK-iM880A/: board.c  uart-board.c
src/boards/SensorNode/: adc-board.c  board.c  i2c-board.c  uart-board.c
src/mac/: LoRaMac.c
src/mac/region/: RegionAS923.c  RegionAS923.h  RegionAU915.c  RegionCN470.c  RegionCN779.c  RegionCommon.c  RegionCommon.h  RegionEU433.c  RegionEU868.c  RegionEU868.h  RegionIN865.c  RegionKR920.c  RegionUS915-Hybrid.c  RegionUS915.c  RegionUS915.h
src/peripherals/: gpio-ioe.h
src/radio/sx1272/: sx1272.c  sx1272.h
src/radio/sx1276/: sx1276.c  sx1276.h
src/system/: gpio.c  gpio.h
